--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘文飞
+title: IT练习生
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: GitCiris
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://leopardpan.cn"
+avatarDesc: 痴疯癫/二八定律
+url: "http://gitciris.github.io"
 
 # 博客是否自动生成目录，false为不生成
 enableToc: true
@@ -19,19 +19,19 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
-    # zhihu: panpanleopard
+    weibo: GitCiris 
+    github: GitCiris
+    zhihu: GitCiris
     # juejin: xxx
-    jianshu: 2ada30d8d0f7
+    jianshu: GitCiris
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 212181880@qq.com
 
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+    id: 4f56bdbbcf493dd75a11fe2dd43bfb8f  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
