--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: IT练习生
 subtitle: 个人站
-description: 欢迎来到我的个人站~
+description: ~Welcome to my blog~
 # 头像里面的标题
 avatarTitle: GitCiris
 # 头像里面的描述
