--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,10 @@ comment:
 
 # Social
 social:
+    
     weibo: GitCiris 
+    qq:index
+    weixin:qq
     github: GitCiris
     zhihu: GitCiris
     # juejin: xxx
