--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,11 @@ comment:
 # Social
 social:
     
-    weibo: GitCiris 
-    qq:index
-    weixin:qq
+    weibo: GitCiris
     github: GitCiris
     zhihu: GitCiris
-    # juejin: xxx
+    juejin: GitCiris
     jianshu: GitCiris
-    # twitter: 
     mail: 212181880@qq.com
 
 
@@ -41,18 +38,7 @@ baidu:
 ga:
     id: UA-84134159-3  
     host: auto  
-
-
-# 《----------------- 上面的信息修改成你自己的 ---------------------------》
-#
-#
-#  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： https://github.com/leopardpan/leopardpan.github.io
-#
-#
-# 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
-
-
+    #
 permalink: /:year/:month/:title/
 # Format
 highlighter: rouge
