--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ social:
     github: GitCiris
     zhihu: GitCiris
     juejin: GitCiris
-    jianshu: GitCiris
+    jianshu: 3505a77ec557
     mail: 212181880@qq.com
 
 
