--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ social:
     
     weibo: GitCiris
     github: GitCiris
+    bilibili: GitCiris
     zhihu: GitCiris
     juejin: GitCiris
     jianshu: 3505a77ec557
