--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ social:
     weibo: GitCiris
     github: GitCiris
     bilibili: GitCiris
-    zhihu: GitCiris
+    #zhihu: GitCiris
     juejin: GitCiris
     jianshu: 3505a77ec557
     mail: 212181880@qq.com
