--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ comment:
 # Social
 social:
     
-    weibo: GitCiris
+    weibo: 7774212638
     github: GitCiris
-    bilibili: GitCiris
-    #zhihu: GitCiris
-    juejin: GitCiris
+    bilibili:  498700326
+    zhihu: li-jing-90-82
+    juejin: 1561747031337560
     jianshu: 3505a77ec557
     mail: 212181880@qq.com
 
